# ComfyUI-AutomaticCFG

./: README.md  __init__.py  chiefs_current_taste.json  experimental_temperature.py  nodes.py  nodes_sag_custom.py  pyproject.toml
presets/: A subtle touch.json  Awesome_attention.json  Awesome_attention_lighter_version.json  Crossed conds customized 1.json  Crossed conds customized 2.json  Crossed conds customized 3.json  Enhanced_details_and_tweaked_attention  Excellent_attention.json  Excellent_attention_attn2_negative.json  Excellent_attention_variation.json  Fixed_attention_all_layers.json  Fixed_attention_all_layers_negative_only.json  Fixed_attention_all_layers_positive_only.json  Fixed_attention_lighter_1_negative_only.json  Fixed_attention_lighter_1_positive_only.json  Fixed_attention_lighter_2.json  Fixed_attention_lighter_2_negative_only.json  Fixed_attention_lighter_2_positive_only.json  Fixed_attention_lighter_3.json  Fixed_attention_lighter_3_negative_only.json  Fixed_attention_lighter_3_positive_only.json  For magic.json  Kickstart.json  Mute input layer 8 attn1 and attn2 for uncond.json  Mute input layer 8 attn1 for uncond.json  Mute input layer 8 attn2 for uncond.json  No idea for a name but this one is pretty nice.json  Original automatic CFG (new version).json  Original automatic CFG (old version).json  Potato Attention Guidance.json  Quack expert.json  Quack expertNegative.json  SDXL_Analog_photo_helper.json  SDXL_Photorealistic_helper.json  SDXL_TOO_MANY_FINGERS.json  SDXL_Vector_Art.json  The red riding latent.json  do_not_delete.json  (+6 more)
(+2 files in other folders)
