[project]
name = "comfyui-automaticcfg"
description = "My own version 'from scratch' of a self-rescaling CFG. It isn't much but it's honest work.\nTLDR: set your CFG at 8 to try it. No burned images and artifacts anymore. CFG is also a bit more sensitive because it's a proportion around 8. Low scale like 4 also gives really nice results since your CFG is not the CFG anymore. Also in general even with relatively low settings it seems to improve the quality."
version = "1.0.0"
license = "LICENSE"
dependencies = ["colorama"]

[project.urls]
Repository = "https://github.com/Extraltodeus/ComfyUI-AutomaticCFG"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "extraltodeus"
DisplayName = "ComfyUI-AutomaticCFG"
Icon = ""
